--- a/src/css/components/_loading.scss
+++ b/src/css/components/_loading.scss
@@ -22,7 +22,7 @@
 
 .vjs-seeking .vjs-loading-spinner,
 .vjs-waiting .vjs-loading-spinner {
-  display: block;
+  display: none;
   // add a delay before actual show the spinner
   animation: vjs-spinner-show 0s linear 0.3s forwards;
 }
